# dtris

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: image_feature_detection.rs  main.rs  writer.rs
triangle/: hello.gltf  hello_sphere.gltf
