[package]
name = "dtris"
version = "0.1.0"
edition = "2024"

[dependencies]
gltf = { version = "1.4", features = ["names", "utils"] }
image = "0.24.8"
rand = "0.9.1"
spade = "2.13.1"
bytemuck = { version = "1.14", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
gltf-json = "1.4.1"
clap = { version = "4.0", features = ["derive"] }
